fixed spacing:

--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ div#intern.col-sm-4.col-sm-offset-2.text-center>h2>a:focus, div#intern.col-sm-4.
 /*WEB DEVELOPMENT PAGE*/
 #dev-col {
   box-shadow: -20px 20px 35px 0px #f9da0c;
-  height: 82%;
+  height: 87%;
   position: absolute;
   z-index: -1;
   right: 0px;
